# is-executable

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: Push.yaml
is_executable/: main.py
tests/: test_main.py
